# OPS-Vision---VMS

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  commit.bat  docker-compose.yml  shell.bat  stop.bat
agent/: Dockerfile  __init__.py  cloud_client.py  (+2 more)
analytics_service/: Dockerfile  main.py  pyproject.toml  requirements.txt
analytics_service/analytics/: base.py  base_yolo.py
analytics_service/analytics/face_recognition/: plugin.py
analytics_service/analytics/intrusion_detection/: plugin.py
analytics_service/analytics/intrusion_detection/tests/: test_plugin.py
analytics_service/analytics/line_crossing/: plugin.py
analytics_service/analytics/lpr_parking/: plugin.py
analytics_service/analytics/lpr_parking/tests/: test_plugin.py
analytics_service/analytics/people_count/: plugin.py
analytics_service/analytics/people_count/tests/: test_plugin.py
analytics_service/analytics/vehicle_count/: plugin.py
analytics_service/analytics/vehicle_count/tests/: test_plugin.py
analytics_service/analytics/vehicle_dwell/: plugin.py
analytics_service/config/: settings.py
analytics_service/core/: django_client.py  mediamtx_connector.py  orchestrator.py  plugin_loader.py  redis_bus.py
core/: Dockerfile  conftest.py  pyproject.toml
core/apps/agents/: views.py
core/apps/agents/migrations/: 0001_initial.py
core/apps/agents/tests/: test_authentication.py  test_models.py  test_views.py
core/apps/analytics/: apps.py  handlers.py  models.py  serializers.py  urls.py  views.py
core/apps/analytics/migrations/: 0001_initial.py  0002_face_models.py  0003_rename_analytics_f_tenant_dt_idx_analytics_f_tenant__2bd209_idx_and_more.py
core/apps/analytics/tests/: test_face_recognition.py
core/apps/cameras/: serializers.py  services.py  tasks.py  urls.py
core/apps/cameras/migrations/: 0003_camera_agent.py
core/apps/cameras/tests/: __init__.py  test_live_stream.py  test_views.py
core/apps/events/: apps.py  consumers.py  normalizers.py  publishers.py  serializers.py  services.py  signals.py  urls.py  views.py
core/apps/events/migrations/: 0004_add_isapi_event_types.py
core/apps/events/tests/: test_tasks.py
core/apps/health/: urls.py
core/apps/notifications/: models.py  serializers.py  services.py  tasks.py
core/apps/notifications/migrations/: 0001_initial.py  0002_add_webhook_secret.py
core/apps/notifications/tests/: test_services.py
core/apps/recordings/: apps.py  serializers.py  tasks.py  views.py
core/apps/recordings/tests/: test_storage_services.py  test_views.py
core/apps/users/: models.py  serializers.py  urls.py
core/apps/users/migrations/: 0003_tenant_facial_recognition.py
core/apps/webhooks/: apps.py
core/config/: celery.py  urls.py  wsgi.py
core/config/settings/: base.py  prod.py
core/shared/: cache.py
core/tests/: test_camera_playback_api.py  test_streaming_proxy_api.py
core/tests/bdd/features/: agent_management.feature  camera_management.feature
core/tests/bdd/step_defs/: test_agent_steps.py  test_camera_steps.py
legado/VMS (White Label)/vms/async_services/: Dockerfile  conftest.py  pyproject.toml
(+501 files in other folders)
