[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vms-analytics-service"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiohttp>=3.10",
    "redis[asyncio]>=5.0",
    "opencv-python-headless>=4.10",
    "ultralytics>=8.3",
    "supervision>=0.21",
    "numpy>=1.26",
    "fast-plate-ocr>=0.2",
]
