[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vms-core"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15,<4.0",
    "django-cors-headers>=4.3,<5.0",
    "psycopg2-binary>=2.9,<3.0",
    "redis>=5.0,<6.0",
    "celery[redis]>=5.4,<6.0",
    "httpx>=0.27,<1.0",
    "pika>=1.3,<2.0",
    "gunicorn>=22.0,<23.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-filter>=24.0,<26.0",
    "python-json-logger>=3.0,<4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-bdd>=7.0,<8.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-mock>=3.12,<4.0",
    "pytest-xdist>=3.5,<4.0",
    "factory-boy>=3.3,<4.0",
    "freezegun>=1.4,<2.0",
    "responses>=0.25,<1.0",
    "httpx>=0.27,<1.0",
]
dev = [
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "django-stubs>=5.0,<6.0",
    "djangorestframework-stubs>=3.15,<4.0",
    "ipython>=8.20,<9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -x -m 'not e2e'"
markers = [
    "unit: testes unitários isolados",
    "integration: testes de integração",
    "e2e: testes end-to-end",
    "bdd: testes comportamentais",
    "slow: testes lentos (>1s)",
]
testpaths = ["apps", "tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config", "shared"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
strict = false

[tool.django-stubs]
django_settings_module = "config.settings.dev"
