[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vms-async-services"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pika>=1.3,<2.0",
    "celery>=5.4,<6.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "redis>=5.0,<6.0",
    "slowapi>=0.1.9,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
]
